--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-pydantic>=2.0.0
-python-dotenv>=1.0.0
+streamlit
+streamlit-chat
+python-dotenv
+langchain
+langchain-groq
+langchain-pinecone
+langchain-voyageai
+langchain-community
+pinecone-client
